• Select Recip: Re-did the segmented-tab icons to be more efficient • Select Recip: When searching, navBar now hidden; revised look of search bar • Fixed spacing of main 3 Statistics Icons • Added a few emoji icons to select Alerts (on Home Screen so far) • Tweaked HUD display settings (slightly bigger text, more rounded corners, less margin around text)

--- a/Nooch/default.css
+++ b/Nooch/default.css
@@ -658,7 +658,7 @@ view {
     font-size: 14px;
     text-align: center;
     color: white;
-    box-shadow: 0px 1px 2px rgba(31,32,33,0.4);
+    box-shadow: 0px 2px 3px rgba(31,32,33,0.35);
 }
 .exportHistorybutton_4{
     top: 380px;
@@ -953,7 +953,7 @@ table-view#select_recipient {
 table-view#select_recipientwithoutSeperator {
     width				: 320px;
     background-color	: #ffffff;
-    row-height			: 90px;
+    row-height			: 124px;
     separator-style 	: none;
 }
 /**  Styles all the profile pictures of users that are returned in the Select Recipient Table.  **/
@@ -2150,7 +2150,7 @@ segmented-control#donatededication {
 .label_filter  {
     width				: 25px;
     height				: 25px;
-    font-family	: "FontAwesome";
+    font-family         : "FontAwesome";
     font-size			: 22px;
     text-align       	: left;
     color 				: #ffffff;
@@ -2159,7 +2159,7 @@ segmented-control#donatededication {
 #glyph_map {
     width				: 25px;
     height				: 25px;
-    font-family	: "FontAwesome";
+    font-family         : "FontAwesome";
     font-size			: 22px;
     text-align       	: right;
     color 				: #ffffff;
@@ -2170,9 +2170,8 @@ segmented-control#donatededication {
     height				: 30px;
     left				: 7px;
     top					: 6px;
-    //-ios-tint-color		: #3fabe1;
+    //-ios-tint-color	: #3fabe1;
     background-color	: #3fabe1;
-    border-color		: #3fabe1;
     font-family			: "Roboto";
     font-weight			: regular;
 }
@@ -3124,7 +3123,7 @@ table-view.stats_top_friends_empty {
 }
 
 .stats_circle_transfers_inActive {
-    left            : 31px;
+    left            : 30px;
     top             : 15px;
     width           : 56px;
     height          : 56px;
@@ -3133,7 +3132,7 @@ table-view.stats_top_friends_empty {
     text-align      : center;
 }
 .stats_circle_transfers_Active {
-    left            : 31px;
+    left            : 30px;
     top             : 15px;
     width           : 56px;
     height          : 56px;
@@ -3160,7 +3159,7 @@ table-view.stats_top_friends_empty {
     text-align      : center;
 }
 .stats_circle_topFriends_inActive {
-    left            : 206px;
+    left            : 214px;
     top             : 15px;
     width           : 56px;
     height          : 56px;
@@ -3169,7 +3168,7 @@ table-view.stats_top_friends_empty {
     text-align      : center;
 }
 .stats_circle_topFriends_Active {
-    left            : 206px;
+    left            : 214px;
     top             : 15px;
     width           : 56px;
     height          : 56px;
